# noi-tu-tieng-viet

./: .gitignore  README.md  TuVung.txt
.github/workflows/: android.yml
AndroidKeyboard/: settings.gradle.kts
AndroidKeyboard/app/: build.gradle.kts  proguard-rules.pro
AndroidKeyboard/app/src/main/: AndroidManifest.xml
AndroidKeyboard/app/src/main/res/drawable/: badge_bottom.xml  badge_smart.xml  badge_top.xml  bg_banner_glow.xml  bg_card.xml  bg_edittext_test.xml  bg_status.xml  btn_accent.xml  btn_muted.xml  btn_neon.xml
AndroidKeyboard/app/src/main/res/layout/: activity_settings.xml  keyboard_view.xml
AndroidKeyboard/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
apk/: apk.md
clipboard_autosuggest/: Cargo.toml  build.rs
clipboard_autosuggest/assets/: icon_64.rgba
clipboard_autosuggest/src/: main.rs
openspec/changes/add-apk-build-script/: proposal.md
openspec/changes/add-bottom-suggestion-mode/: design.md  proposal.md  tasks.md
openspec/changes/add-bottom-suggestion-mode/specs/: bottom-suggestion-mode.md
openspec/changes/add-bottom-tier-mode-android/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-10-document-project-overview/: design.md  proposal.md  tasks.md
openspec/changes/integrate-standard-vietnamese-keyboard/: design.md  proposal.md  tasks.md
openspec/changes/polish-android-ui/: design.md  proposal.md  tasks.md
openspec/specs/: bottom-tier-mode.md  keyboard-integration.md
openspec/specs/android-ui-polish/: spec.md
openspec/specs/project-architecture/: spec.md
(+3 files in other folders)
